argo-rollouts/blue-green-deployments/portal-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: portal-app
  name: portal-ingress-resource
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:828048069567:certificate/043d5d2d-3645-4a14-879b-f36d24c4c339
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: portal.spontansolutions.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: portal-app-rollout-active
              port:
                number: 80
